mobile style change

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
@@ -758,6 +758,7 @@ https://www.phpied.com/delay-loading-your-print-css/
         position: sticky;
         top: 5%;
         left: 17.5%;
+        z-index: 5;
     }
     
     #topSelect,
