--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
@@ -437,6 +437,7 @@ https://www.phpied.com/delay-loading-your-print-css/
         margin-left: 0;
         border-radius: 60px;
         margin-right: 2vw;
+        padding: 20px;
     }
     
     #mediaReactions>article>div>h5 {
