sticky nav clickthrough
the sticky nav introduced a transparent bar along the top you couldnt click through when scrolling - removed pointer events on it, and re enabled on the buttons that stick

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
@@ -507,6 +507,15 @@ https://www.phpied.com/delay-loading-your-print-css/
     
     main>nav {
         justify-content: center !important;
+        pointer-events: none;
+    }
+    
+    main>nav>ul {
+        pointer-events: auto;
+    }
+    
+    main>nav>button {
+        pointer-events: auto;
     }
     
     #bookInfo {
