--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week11/css/styles.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week11/css/styles.css
@@ -12,11 +12,21 @@ svg {
 
 /* STEP 6: Set up a transition for the dashed line circle that serves as the pie wedge */
 
+circle[stroke-dasharray] {
+    transition: all 0.5s;
+}
+
 
 /* STEP 7: Encourage user interaction with the chart by changing the cursor */
 
+svg:hover {
+    cursor: pointer;
+}
+
 
 /* STEP 8: Set up the dash and the space for the dashed line at zero to start with */
+
+svg:active circle[stroke-dasharray] {}
 
 
 /* STEP 9: Set a more attractive font-family for the chart, then head back to pie-graph.html for the next step */
